# spalhad

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  client.sh  cluster.config.json  docker-compose.yml  test.sh
docker/: launch-server.sh
spalhad-actor/: Cargo.toml
spalhad-actor-macros/: Cargo.toml
spalhad-actor-macros/src/: call_superset.rs  lib.rs
spalhad-actor/src/: lib.rs
spalhad-client/: Cargo.toml
spalhad-client-bin/: Cargo.toml
spalhad-client-bin/src/: main.rs
spalhad-client/src/: lib.rs
spalhad-server/: Cargo.toml
spalhad-server-bin/: Cargo.toml
spalhad-server-bin/src/: main.rs  util.rs
spalhad-server/src/: actor.rs  http.rs  lib.rs  mux.rs  storage.rs  sync.rs  taks.rs
spalhad-server/src/actor/: bouncer.rs  control.rs  coordinator.rs  core.rs  storage.rs
spalhad-server/src/actor/message/: kv.rs
spalhad-server/src/actor/storage/: client.rs  cluster.rs  dir.rs  memory.rs  static_cluster.rs  switch.rs
spalhad-server/src/http/: app.rs  cluster.rs  error.rs  internal.rs  kv.rs  sync.rs  v1.rs
spalhad-server/src/http/v1/: internal.rs  kv.rs  sync.rs
spalhad-server/src/storage/: client.rs  dir.rs  memory.rs
spalhad-spec/: Cargo.toml
spalhad-spec/src/: cluster.rs  error.rs  hex.rs  key.rs  kv.rs  lib.rs  random_id.rs
spalhad-spec/src/cluster/: node_id.rs  run_id.rs
spalhad-spec/src/kv/: key.rs
spalhad-task/: Cargo.toml
spalhad-task/src/: lib.rs
test/: all.sh  functional.sh  nw_partition.sh  util.sh
