[workspace]
members = [ "spalhad-client", "spalhad-client-bin", "spalhad-server", "spalhad-server-bin","spalhad-spec"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha3 = "0.10.8"
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
