[package]
name = "spalhad-client"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12.12", features = ["json"] }
spalhad-spec = { path = "../spalhad-spec" }
