[package]
name = "spalhad-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tower-layer = "0.3.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
trait-variant = { workspace = true }
spalhad-spec = { path = "../spalhad-spec" }
spalhad-client = { path = "../spalhad-client" }
